Loads of changes.

--- a/codenet.kv
+++ b/codenet.kv
@@ -469,7 +469,7 @@ WindowManager:
                                 font_style: 'Subtitle2'
                                 halign: "center"
                                 markup: True
-                                text: f"[size=30sp][font=Icons]{md_icons['file-eye']}[/font] [font=Icons]{md_icons['file-eye']}[/font][/size]"
+                                text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
                                 text_color: app.theme_cls.primary_color
@@ -521,7 +521,7 @@ WindowManager:
                                 font_style: 'Subtitle2'
                                 halign: "center"
                                 markup: True
-                                text: f"[size=30sp][font=Icons]{md_icons['file-eye']}[/font] [font=Icons]{md_icons['file-eye']}[/font][/size]"
+                                text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
                                 text_color: app.theme_cls.primary_color
