--- a/gui/informationscreens/RoundsScreen.kv
+++ b/gui/informationscreens/RoundsScreen.kv
@@ -38,6 +38,7 @@
                 MDSeparator:
                     color: C("FFFFFF")
 
+    # Legend
                 MDLabel:
                     adaptive_height: True
                     text_color: C('FFFFFF')
@@ -48,15 +49,31 @@
                 MDLabel:
                     text_color: app.theme_cls.primary_color
                     font_style: "Body2"
-                    text: f"[size=22sp][font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF]: Unrevealed Evidence[/color]"
+                    text: f"[size=22sp][font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF]: Log[/color]"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
 
                 MDLabel:
-                    text_color: C('FFFFFF')
+                    text_color: app.theme_cls.primary_color
                     font_style: "Body2"
-                    text: f"[color=#1565c0][size=22sp][font=Icons]{md_icons['folder-key']}[/font][/size][/color]: Exclusive Evidence"
+                    text: f"[size=22sp][font=Icons]{md_icons['file']}[/font][/size][color=#FFFFFF]: Digital Footprint[/color]"
+                    theme_text_color: "Custom"
+                    adaptive_height: True
+                    markup: True
+
+                MDLabel:
+                    text_color: app.theme_cls.primary_color
+                    font_style: "Body2"
+                    text: f"[size=22sp][font=Icons]{md_icons['lock']}[/font][/size][color=#FFFFFF]: Protected Information[/color]"
+                    theme_text_color: "Custom"
+                    adaptive_height: True
+                    markup: True
+
+                MDLabel:
+                    text_color: app.theme_cls.primary_color
+                    font_style: "Body2"
+                    text: f"[size=22sp][font=Icons]{md_icons['eye']}[/font][/size][color=#FFFFFF]: Exclusive Information[/color]"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
@@ -77,36 +94,120 @@
                             size: self.size
 
     # Round 1
-
-                    MDLabel:
-                        text_color: app.theme_cls.primary_color
-                        font_style: "Body2"
-                        text: f" [color=#FFFFFF][font=Icons][size=22sp]{md_icons['folder-search']}[/font][/size] Round 1:[/color] [size=22sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
-                        theme_text_color: "Custom"
+                    MDBoxLayout:
                         adaptive_height: True
-                        markup: True
+                        spacing: "8dp"
+
+                        Widget:
+
+                        MDLabel:
+                            size_hint_x: None
+                            width: self.texture_size[0]
+                            text_size: None, None
+                            text_color: C("FFFFFF")
+                            font_style: "Body2"
+                            text: f"[font=Icons][size=22sp]{md_icons['archive-lock']}[/font][/size] Round 1: "
+                            theme_text_color: "Custom"
+                            adaptive_height: True
+                            markup: True
+
+                        MDIcon:
+                            icon: "folder-lock"
+                            text_color: app.theme_cls.primary_color
+                            theme_text_color: "Custom"
+                            adaptive_height: True
+                            badge_icon: 'numeric-1-circle-outline'
+                            badge_bg_color: C('000000')
+                            badge_icon_color: app.theme_cls.primary_color
+
+                        MDIcon:
+                            icon: "file"
+                            text_color: app.theme_cls.primary_color
+                            theme_text_color: "Custom"
+                            adaptive_height: True
+                            badge_icon: 'numeric-4-circle-outline'
+                            badge_bg_color: C('000000')
+                            badge_icon_color: app.theme_cls.primary_color
+
+                        Widget:
 
     # Round 2
-
-                    MDLabel:
-                        text_color: app.theme_cls.primary_color
-                        font_style: "Body2"
-                        md_bg_color: app.theme_cls.primary_dark
-                        text: f" [color=#FFFFFF][font=Icons][size=22sp]{md_icons['folder-search']}[/font][/size] Round 2:[/color] [size=22sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF],[/color] [size=22sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
-                        theme_text_color: "Custom"
+                    MDBoxLayout:
                         adaptive_height: True
-                        markup: True
+                        spacing: "8dp"
+
+                        Widget:
+
+                        MDLabel:
+                            size_hint_x: None
+                            width: self.texture_size[0]
+                            text_size: None, None
+                            text_color: C("FFFFFF")
+                            font_style: "Body2"
+                            text: f"[font=Icons][size=22sp]{md_icons['archive']}[/font][/size] Round 2: "
+                            theme_text_color: "Custom"
+                            adaptive_height: True
+                            markup: True
+
+                        MDIcon:
+                            icon: "folder"
+                            text_color: app.theme_cls.primary_color
+                            theme_text_color: "Custom"
+                            adaptive_height: True
+                            badge_icon: 'numeric-3-circle-outline'
+                            badge_bg_color: C('000000')
+                            badge_icon_color: app.theme_cls.primary_color
+
+                        MDIcon:
+                            icon: "file"
+                            text_color: app.theme_cls.primary_color
+                            theme_text_color: "Custom"
+                            adaptive_height: True
+                            badge_icon: 'numeric-3-circle-outline'
+                            badge_bg_color: C('000000')
+                            badge_icon_color: app.theme_cls.primary_color
+
+                        Widget:
 
     # Round 3
-
-                    MDLabel:
-                        text_color: app.theme_cls.primary_color
-                        font_style: "Body2"
-                        text: f" [color=#FFFFFF][size=22sp][font=Icons]{md_icons['folder-search']}[/font][/size] Round 3:[/color][color=#1565c0] [size=22sp][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color][color=#FFFFFF],[/color] [color=#1565c0][size=22sp][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color]"
-                        theme_text_color: "Custom"
+                    MDBoxLayout:
                         adaptive_height: True
-                        markup: True
+                        spacing: "8dp"
 
+                        Widget:
+
+                        MDLabel:
+                            size_hint_x: None
+                            width: self.texture_size[0]
+                            text_size: None, None
+                            text_color: C("FFFFFF")
+                            font_style: "Body2"
+                            text: f"[font=Icons][size=22sp]{md_icons['archive-eye']}[/font][/size] Round 3: "
+                            theme_text_color: "Custom"
+                            adaptive_height: True
+                            markup: True
+
+                        MDIcon:
+                            icon: "folder-eye"
+                            text_color: app.theme_cls.primary_color
+                            theme_text_color: "Custom"
+                            adaptive_height: True
+                            badge_icon: 'numeric-2-circle-outline'
+                            badge_bg_color: C('000000')
+                            badge_icon_color: app.theme_cls.primary_color
+
+                        MDIcon:
+                            icon: "file"
+                            text_color: app.theme_cls.primary_color
+                            theme_text_color: "Custom"
+                            adaptive_height: True
+                            badge_icon: 'numeric-2-circle-outline'
+                            badge_bg_color: C('000000')
+                            badge_icon_color: app.theme_cls.primary_color
+
+                        Widget:
+
+    # Begin Round
                 MDSeparator:
                     color: C("FFFFFF")
 
@@ -115,12 +216,12 @@
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
                     font_style: 'H6'
-                    text: "Begin Round"
+                    text: "Round Control"
 
                 MDLabel:
                     text_color: app.theme_cls.primary_color
                     font_style: "Body2"
-                    text: f"In order to begin the next round, the [color=#FFFFFF][size=22sp][font=Icons]{md_icons['play']}[/font][/size][/color] at the bottom must be pressed. It is only available once all logs have been uploaded for the round and the timer has ended. The timer may also end prematurely if agreed upon. Please review the timer section for more information."
+                    text: f"In order to begin the next round, press the [color=#FFFFFF][size=22sp][font=Icons]{md_icons['play']}[/font][/size][/color] at the bottom of the main screen. It will only appear if the timer is not active and if you're not currently in an action phase. If a timer is active, you may press the [color=#FFFFFF][size=22sp][font=Icons]{md_icons['stop']}[/font][/size][/color] and agree to the prompt in order to end the turn prematurely. Before doing so, this must be agreed upon by the majority of the group. After an action phase, the device must be returned to the host so they can complete the phase by pressing the [color=#FFFFFF][size=22sp][font=Icons]{md_icons['check']}[/font][/size][/color]."
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
@@ -138,7 +239,61 @@
                 MDLabel:
                     text_color: app.theme_cls.primary_color
                     font_style: "Body2"
-                    text: f"At the top of the screen there are three [color=#FFFFFF][size=22sp][font=Icons]{md_icons['circle-outline']}[/font][/size][/color]'s which represent each round. When a round begins, a [color=#FFFFFF][size=22sp][font=Icons]{md_icons['circle-outline']}[/font][/size][/color] becomes a [color=#FFFFFF][size=22sp][font=Icons]{md_icons['circle-slice-8']}[/font][/size][/color] to indicate what the current round is. The game ends once all three rounds have been completed. Once the game ends, a [color=#FFFFFF][size=22sp][font=Icons]{md_icons['chevron-right']}[/font][/size][/color] will appear at the bottom right of the screen which will take you to the results screen."
+                    text: f"At the top of the main screen there are three [color=#FFFFFF][size=22sp][font=Icons]{md_icons['circle-outline']}[/font][/size][/color] which represent each round. When a round begins, an indicator becomes a [color=#FFFFFF][size=22sp][font=Icons]{md_icons['circle-slice-8']}[/font][/size][/color] to indicate what the current round is. The game ends once all three rounds have been completed. A [color=#FFFFFF][size=22sp][font=Icons]{md_icons['chevron-right']}[/font][/size][/color] will appear at the bottom right of the screen after the last round has been completed which will take you to the game summary once pressed."
+                    theme_text_color: "Custom"
+                    adaptive_height: True
+                    markup: True
+
+                MDSeparator:
+                    color: C("FFFFFF")
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    text: "Round 1: Main Log"
+
+                MDLabel:
+                    text_color: app.theme_cls.primary_color
+                    font_style: "Body2"
+                    text: f"The first round provides one [color=#FFFFFF][size=22sp][font=Icons]{md_icons['folder-lock']}[/font][/size][/color]. This log is protect which means it is incapable of being corrupted or being tampered with. It will have four [color=#FFFFFF][size=22sp][font=Icons]{md_icons['file']}[/font][/size][/color] inside of it. The main log is the most reliable public log in the game. Therefore it should be used as a comparison with other evidence. There is [color=#FFFFFF]one[/color] minute set on the timer during this round."
+                    theme_text_color: "Custom"
+                    adaptive_height: True
+                    markup: True
+
+                MDSeparator:
+                    color: C("FFFFFF")
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    text: "Round 2: Action Phase"
+
+                MDLabel:
+                    text_color: app.theme_cls.primary_color
+                    font_style: "Body2"
+                    text: f"The second round provides three [color=#FFFFFF][size=22sp][font=Icons]{md_icons['folder']}[/font][/size][/color]. Each log will have three [color=#FFFFFF][size=22sp][font=Icons]{md_icons['file']}[/font][/size][/color] inside of it. Before the timer begins, [color=#FFFFFF]four[/color] players at random will be chosen to perform an action. These actions can provide evidence but can also corrupt or tamper with the logs and digital footprints. There is [color=#FFFFFF]six[/color] minutes set on the timer during this round."
+                    theme_text_color: "Custom"
+                    adaptive_height: True
+                    markup: True
+
+                MDSeparator:
+                    color: C("FFFFFF")
+
+                MDLabel:
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    text: "Round 3: Player Log Phase"
+
+                MDLabel:
+                    text_color: app.theme_cls.primary_color
+                    font_style: "Body2"
+                    text: f"The third round provides two [color=#FFFFFF][size=22sp][font=Icons]{md_icons['folder-eye']}[/font][/size][/color]. Each log will have two [color=#FFFFFF][size=22sp][font=Icons]{md_icons['file']}[/font][/size][/color] inside of it. Before the timer begins, [color=#FFFFFF]two[/color] players at random will be chosen to obtain an exclusive log. There is [color=#FFFFFF]five[/color] minutes set on the timer during this round."
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
